--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -123,6 +123,9 @@
  <Reference Include="UnityEditor.VR">
  <HintPath>D:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/UnityVR/Editor/UnityEditor.VR.dll</HintPath>
  </Reference>
+ <Reference Include="UnityEditor.OctaneInstaller">
+ <HintPath>D:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/OctaneInstaller/Editor/UnityEditor.OctaneInstaller.dll</HintPath>
+ </Reference>
  <Reference Include="UnityEditor.Graphs">
  <HintPath>D:/Program Files/Unity/Editor/Data/Managed/UnityEditor.Graphs.dll</HintPath>
  </Reference>
